improved form on other themes

--- a/amadeus/static/css/themes/red.css
+++ b/amadeus/static/css/themes/red.css
@@ -28,6 +28,49 @@ a, a:focus, a:hover {
 #btn-search:hover {
   background: #136363; }
 
+.alert.alert-success {
+  background-color: #591111;
+  color: #FFFFFF; }
+
+/* FORM Fields */
+.form-group.is-focused label, .form-group.is-focused label.control-label {
+  color: #8e1c1c; }
+
+.form-group.is-focused .form-control {
+  outline: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#591111), to(#591111)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
+  background-image: -webkit-linear-gradient(#591111, #591111), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -o-linear-gradient(#591111, #591111), -o-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#591111, #591111), linear-gradient(#D2D2D2, #D2D2D2);
+  -webkit-background-size: 100% 2px, 100% 1px;
+  background-size: 100% 2px, 100% 1px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+
+.form-control, .form-group .form-control {
+  border: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#591111), to(#591111)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
+  background-image: -webkit-linear-gradient(#591111, #591111), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -o-linear-gradient(#591111, #591111), -o-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#591111, #591111), linear-gradient(#D2D2D2, #D2D2D2);
+  -webkit-background-size: 0 2px, 100% 1px;
+  background-size: 0 2px, 100% 1px;
+  background-repeat: no-repeat;
+  background-position: center bottom, center -webkit-calc(100% - 1px);
+  background-position: center bottom, center calc(100% - 1px);
+  background-color: transparent;
+  -webkit-transition: background 0s ease-out;
+  -o-transition: background 0s ease-out;
+  transition: background 0s ease-out;
+  float: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0; }
+
+/* */
 .btn.btn-sucess.btn-raised {
   color: #FFFFFF;
   background-color: #8e1c1c !important; }
@@ -192,11 +235,11 @@ a.btn.btn-sm.btn-success.btn-raised {
 .core-subjects-options li {
   background-color: #FFFFFF;
   border-bottom-color: #999999;
-  color: #136363; }
+  color: #591111; }
 
 .core-subjects-options li.active {
   color: inherit;
-  border-bottom-color: #136363; }
+  border-bottom-color: #8e1c1c; }
 
 .create-subject-btn {
   background-color: #003333;
@@ -285,7 +328,7 @@ a.btn.btn-sm.btn-success.btn-raised {
   background: #F5F5F5; }
 
 .outside-title {
-  color: #43a251; }
+  color: #8e1c1c; }
 
 .titleTopic a h4, .titleTopic h4 {
   color: white; }
