--- a/amadeus/static/css/themes/black.css
+++ b/amadeus/static/css/themes/black.css
@@ -28,6 +28,45 @@ a, a:focus, a:hover {
 #btn-search:hover {
   background: #232b2b; }
 
+/* FORM Fields */
+.form-group.is-focused label, .form-group.is-focused label.control-label {
+  color: #0e1111; }
+
+.form-group.is-focused .form-control {
+  outline: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#474b4b), to(#474b4b)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
+  background-image: -webkit-linear-gradient(#474b4b, #474b4b), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -o-linear-gradient(#474b4b, #474b4b), -o-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#474b4b, #474b4b), linear-gradient(#D2D2D2, #D2D2D2);
+  -webkit-background-size: 100% 2px, 100% 1px;
+  background-size: 100% 2px, 100% 1px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+
+.form-control, .form-group .form-control {
+  border: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#474b4b), to(#474b4b)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
+  background-image: -webkit-linear-gradient(#474b4b, #474b4b), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -o-linear-gradient(#474b4b, #474b4b), -o-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#474b4b, #474b4b), linear-gradient(#D2D2D2, #D2D2D2);
+  -webkit-background-size: 0 2px, 100% 1px;
+  background-size: 0 2px, 100% 1px;
+  background-repeat: no-repeat;
+  background-position: center bottom, center -webkit-calc(100% - 1px);
+  background-position: center bottom, center calc(100% - 1px);
+  background-color: transparent;
+  -webkit-transition: background 0s ease-out;
+  -o-transition: background 0s ease-out;
+  transition: background 0s ease-out;
+  float: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0; }
+
+/* */
 .btn.btn-sucess.btn-raised {
   color: #FFFFFF;
   background-color: #0e1111 !important; }
@@ -39,6 +78,10 @@ button.btn.btn-sucess.btn-raised {
 a.btn.btn-sm.btn-success.btn-raised {
   color: #FFFFFF;
   background-color: #0e1111 !important; }
+
+.alert.alert-success {
+  background-color: #474b4b;
+  color: #FFFFFF; }
 
 .btn-group-raised .btn.btn-success,
 .btn-group-raised .input-group-btn .btn.btn-success,
@@ -192,11 +235,11 @@ a.btn.btn-sm.btn-success.btn-raised {
 .core-subjects-options li {
   background-color: #FFFFFF;
   border-bottom-color: #414a4c;
-  color: #232b2b; }
+  color: #414a4c; }
 
 .core-subjects-options li.active {
   color: inherit;
-  border-bottom-color: #232b2b; }
+  border-bottom-color: #0e1111; }
 
 .create-subject-btn {
   background-color: #3b444b;
@@ -285,7 +328,7 @@ a.btn.btn-sm.btn-success.btn-raised {
   background: #F5F5F5; }
 
 .outside-title {
-  color: #43a251; }
+  color: #0e1111; }
 
 .titleTopic a h4, .titleTopic h4 {
   color: white; }
