--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -58,6 +58,7 @@
 		{% endif %}
 	</div>
 
+	<div id="modal_subject"></div>
 
     <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
 {% endblock content %}
