Adding subject mural post crud

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1119,7 +1119,7 @@ li.item .notify_badge {
     padding-top: 5px;
 }
 
-.marked_user {
+.marked_user, .post_resource {
     font-weight: 700;
 }
 
