--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -564,7 +564,7 @@ a.add-row
     color: #1d8fe0
 
 
-.post .post-user, .comment .comment-user, .marked_user 
+.post .post-user, .comment .comment-user, .marked_user, .post_resource 
     color: #26A69A
 
 
@@ -629,7 +629,7 @@ a.add-row
     background: $white
 
 
-.mural-category 
+.mural-category, .mural-subject 
     background: #EEE
 
 
