--- a/mural/templates/mural/list_subject.html
+++ b/mural/templates/mural/list_subject.html
@@ -65,7 +65,7 @@
                                 </div>
                             </div>
                             <div id="{{subject.slug}}" class="panel-collapse panel-body collapse mural-subject">
-                                <div class="col-md-12 cards-content mural" data-url="{% url 'mural:load_category' subject.id %}">
+                                <div class="col-md-12 cards-content mural" data-url="{% url 'mural:load_subject' subject.id %}">
                                     <div class="col-md-9 col-sm-9 col-xs-9 mural-list">
                                         <div class="post_make panel panel-default">
                                             <div class="panel-body">
@@ -74,7 +74,7 @@
                                                 </div>
                                                 <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 post-field">
                                                     <div>
-                                                        <h4 data-url="{% url 'mural:create_category' subject.slug %}">{% trans 'Wish to make a new post?' %}</h4>
+                                                        <h4 data-url="{% url 'mural:create_subject' subject.slug %}">{% trans 'Wish to make a new post?' %}</h4>
                                                     </div>
                                                 </div>
                                             </div>
