modified subject delete process, now it works on /view and on /home with redirect

--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -59,6 +59,6 @@
 	</div>
 
 	<div id="modal_subject"></div>
-
+	<script type="text/javascript" src="{% static "subjects/js/modal_subject.js" %}"></script>
     <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
 {% endblock content %}
