--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -5,10 +5,10 @@
 
 {% if subject.visible or has_subject_permissions %}
     {% if subject.visible %}
-        <div class="panel panel-info subject-panel">
+        <div class="panel panel-info subject-panel" id="subject_{{subject.slug}}">
             <div class="panel-heading">
     {% elif has_subject_permissions %}
-        <div class="panel panel-info subject-panel-invisible">
+        <div class="panel panel-info subject-panel-invisible" id="subject_{{subject.slug}}">
             <div class="panel-heading panel-invisible">
     {% endif %}
             <div class="row">
