--- a/mural/templates/mural/list_category.html
+++ b/mural/templates/mural/list_category.html
@@ -17,7 +17,7 @@
     <div id="core-subjects-options-div">
         <ul class="core-subjects-options">
             <a href="{% url 'mural:manage_general' %}"><li>{% trans "General" %} ({{ totals.general }})</li></a>
-            <a href="{% url 'mural:manage_category' %}"><li class="active">{% trans "Per Category" %} (<span class="cat_badge">{{ totals.category }}</span>)</li></a>
+            <a href="{% url 'mural:manage_category' %}"><li class="active">{% trans "Per Category" %} (<span class="ung_badge">{{ totals.category }}</span>)</li></a>
             <a href="{% url 'mural:manage_subject' %}"><li>{% trans "Per Subject" %} ({{ totals.subject }})</li></a>
         </ul>
     </div>
@@ -65,7 +65,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="{{category.slug}}" class="panel-collapse panel-body collapse mural-category">
+                            <div id="{{category.slug}}" class="panel-collapse panel-body collapse mural-ungeneral">
                                 <div class="col-md-12 cards-content mural" data-url="{% url 'mural:load_category' category.id %}">
                                     <div class="col-md-9 col-sm-9 col-xs-9 mural-list">
                                         <div class="post_make panel panel-default">
@@ -134,5 +134,5 @@
 
     <script type="text/javascript" src="{% static 'js/category.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/mural.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/mural_category.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/mural_ungeneral.js' %}"></script>
 {% endblock %}
