making carroussel work but acessibility is not, added d3 js to project

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/jPages.css' %}">  
 
-	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
+	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/bootstrap-acessibility.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'material/js/material.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'material/js/ripples.min.js' %}"></script>
@@ -38,6 +38,7 @@
 	<script type="text/javascript" src="{% static 'js/alertify.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jscookie.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jPages.js' %}"></script>
+    <script type="text/javascript" src="{% static "js/d3.min.js" %}"></script>
 
   	<!-- Font awesome -->
 	<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
