--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -14,7 +14,20 @@
         {% endfor %}
     {% endif %}
     
-	<h2 class=" my-subjects-title"><b><i>{% trans "Most popular keywords" %}</i></b></h2>
+
+  <div id="myCarousel" class="carousel slide " data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+     	<h2 class=" my-subjects-title"><b><i>{% trans "Most popular keywords" %}</i></b></h2>
 	<div id="" class="col-md-12">
 		<div class="users-cloud div-users-cloud">
 			<ul class=" users-cloud">
@@ -28,16 +41,37 @@
 					{% endif %}
 
 					
-					{% comment %}
-						
-					
-					<li class="big"><a href="{% url 'subjects:search' %}?search={{tag.name}}">{{tag.name}}</a></li>
-					
-					{% endcomment %}
 				{% endfor %}
 			</ul>
 		</div>
 	</div>
+    </div>
+
+    <div class="item">
+    	
+      <img src="{% static "img/pt-br.png" %} " alt="Chania">
+    </div>
+
+    <div class="item">
+      <img src="{% static "img/en.png" %} " alt="Flower">
+    </div>
+
+    <div class="item">
+      <img src="{% static "img/pt-br.png" %} " alt="Flower">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+	
 	
 	<div class="col-md-12 cards-content">
 		<h2 class=" my-subjects-title"><b><i>{% trans "My Subjects" %} ({{ total_subs }})</i></b></h2>
