--- a/pdf_file/templates/pdf_file/view.html
+++ b/pdf_file/templates/pdf_file/view.html
@@ -1,6 +1,6 @@
 {% extends "subjects/view.html" %}
 
-{% load static i18n django_bootstrap_breadcrumbs %}
+{% load static i18n django_bootstrap_breadcrumbs permissions_tags subject_counter %}
 
 {% block style %}
 	{{block.super}}
@@ -24,6 +24,8 @@
 
 
 {% block content %}
+    {% subject_permissions request.user subject as has_subject_permissions %}
+
  {% if subject.visible %}
 		<div class="panel panel-info topic-panel">
         	<div class="panel-heading">
@@ -38,7 +40,10 @@
                         </h4>
 
                         <div class="col-md-5 pull-right category-card-items">
-                            <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                            <a href="{% url 'mural:resource_view' pdf_file.slug %}" class="pull-right action_icon">
+                                <i class="fa fa-list" aria-hidden="true"></i>
+                                {% resource_mural_number pdf_file request.user %}
+                            </a>
                         </div>
                     </div>
                 </div>
