--- a/youtube_video/templates/youtube/view.html
+++ b/youtube_video/templates/youtube/view.html
@@ -41,7 +41,7 @@
 						</h4>
 
 						<div class="col-md-5 pull-right category-card-items">
-							<a href="">
+							<a href="{% url 'mural:resource_view' youtube.slug %}" class="pull-right action_icon">
 								<i class="fa fa-list" aria-hidden="true"></i>
 								{% resource_mural_number youtube request.user %}
 							</a>
