--- a/webpage/templates/webpages/view.html
+++ b/webpage/templates/webpages/view.html
@@ -25,12 +25,12 @@
         {% endfor %}
     {% endif %}
 
-    {% subject_permissions request.user subject as has_subject_permissions %}
+    {% resource_permissions request.user webpage as has_resource_permissions %}
 
-    {% if subject.visible %}
+    {% if webpage.visible %}
 		<div class="panel panel-info topic-panel">
         	<div class="panel-heading">
-	{% elif has_subject_permissions %}
+	{% elif has_resource_permissions %}
 		<div class="panel panel-info topic-panel-invisible">
         	<div class="panel-heading panel-invisible">
     {% endif %}
