improved pie chart to render better

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/jPages.css' %}">  
 
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/bootstrap-acessibility2.min.js' %}"></script>
+	<!--<script type="text/javascript" src="{% static 'js/bootstrap-acessibility2.min.js' %}"></script>-->
 	<script type="text/javascript" src="{% static 'material/js/material.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'material/js/ripples.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/moment-with-locales.js' %}"></script>
